--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,9 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 SwaggerMarkdown = "1b6eb727-ad4b-44eb-9669-b9596a6e760f"
 
+[compat]
+julia = "1.6"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
