--- a/.github/workflows/run-server.yml
+++ b/.github/workflows/run-server.yml
@@ -1,7 +1,7 @@
 name: run-compartmental-model-server
 on: [push]
 jobs:
-  runsh-on: ubuntu-latest
+  runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v4
     - uses: julia-actions/setup-julia@v1
