ci: add check-bats-version

--- a/.github/workflows/run-server.yml
+++ b/.github/workflows/run-server.yml
@@ -1,6 +1,7 @@
 name: run-compartmental-model-server
 on: [push]
 jobs:
+  check-bats-version:
   runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v4
