--- a/.github/workflows/run-server.yml
+++ b/.github/workflows/run-server.yml
@@ -1,7 +1,7 @@
 name: run-compartmental-model-server
 on: [push]
 jobs:
-  check-bats-version:
+  run-server-on-arch:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -9,4 +9,5 @@ jobs:
         with:
           version: nightly
           arch: arm
+      - run: uname -a
       - run: julia --project bin/main.jl
